--- a/1.html
+++ b/1.html
@@ -13,7 +13,7 @@
   <h2>뿡빵이</H2>
   <P>신동성은 <strong>1999년 <U>1월</U> 7일</strong>에 출생하였으며, 성별은 남성이고 혈액형은 A형이다.
   그는 현재(2021년) 만 22세가 되었으며, 그의 사회적 나이는 23세이다.<BR><BR>
-    <IMG SRC="https://github.com/jeoajeoa/-/blob/main/%EC%A0%95%EC%95%84%EC%99%80%20%EB%8F%99%EC%84%B1%EC%9D%B4%20%EB%8D%B0%EC%9D%B4%ED%8A%B8.jpg?raw=true.JPG"WIDTH="250"></P><P STYLE="MARGIN-TOP:10PX;">
+    <IMG SRC="정아와 동성이 .jpg"WIDTH="250"></P><P STYLE="MARGIN-TOP:10PX;">
   동성동성이가 뿡빵이가 된 이유는 다음과 같다. 동성동성이는 자주 <a href="https://namu.wiki/w/%EB%A3%A8%EB%A8%B8" target="_blank" title="루머의 사전적 정의">루머</a>를 생성하곤 하는데, 안타깝게도 그 루머의 생성 근원지는 동성이의 입이 아니라 동성이의 <U>엉덩이</U>이다. 동성이의 엉덩이가 루머를 생성하면 동성이의 입은 그것이 아니라고 부정하곤 한다. 그래서 동성이의 루머의 주된 내용인 <strong>뿡</strong>과 그 다음으로 자주 생성되는 내용인 <strong>빵</strong>이가 합쳐서 동성이가 뿡빵이라고 불리게 된 것이다.
   물론 동성이의 입은 계속해서 그것을 부정하고 있기는 하다.</P>
 </BODY>
