--- a/2.html
+++ b/2.html
@@ -13,7 +13,7 @@
   <h2>도롱소롱</H2>
   <P>신동성은 <strong>1999년 <U>1월</U> 7일</strong>에 출생하였으며, 성별은 남성이고 혈액형은 A형이다.
   그는 현재(2021년) 만 22세가 되었으며, 그의 사회적 나이는 23세이다.<BR><BR>
-    <IMG SRC="정아와 동성이 데이트.JPG"WIDTH="250"></P><P STYLE="MARGIN-TOP:10PX;">
+    <IMG SRC="정아와 동성이 데이트."WIDTH="250"></P><P STYLE="MARGIN-TOP:10PX;">
   동성동성이가 도롱소롱이가 된 이유는 다음과 같다. 종아가 동성이를 처음에 <strong>동송이</strong>라고 부르기 시작했고,
   <strong>동송이</strong>는 <strong>도롱이</strong>가 되었다. <strong>도롱이</strong>는 동성이의 이름의 두 번째 글자를 전혀 반영하지 못하는 별명이기 때문에 정아는 동성이의 <strong>성</strong>자를 어떻게 살릴 수 있을지 고민하였고, 도롱이에서 약간 변형하여 <strong>도롱소롱</strong>이라고 하였다..</P>
 </BODY>
