--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <h2>환영해요 여러분!</H2>
   <h4>동성이의 별명에 대해서 알아볼까요?</h4>
   <IMG SRC="정아와 동성이 데이트.jpg "WIDTH="250">
-  <br><iframe> "width"="975" "height"="731" src="https://www.youtube.com/embed/IEPv31_E__4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
+  <br><iframe width="975" height="731" src="https://www.youtube.com/embed/IEPv31_E__4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </BODY>
 </html>
